# python-sdk

./: Makefile  README.md  buf.gen.yaml  example.py  pyproject.toml  requirements.txt  tox.ini
.github/actions/: ci.yaml
.github/workflows/: ci.yaml  publish.yaml
lekko_client/: __init__.py  client.py  constants.py  context.py  exceptions.py  helpers.py  models.py
lekko_client/clients/: __init__.py  cached_backend_client.py  cached_git_client.py  client.py  config_client.py  distribution_client.py  grpc_client.py
lekko_client/evaluation/: evaluation.py  rules.py
lekko_client/stores/: __init__.py  memory.py  store.py
tests/: conftest.py  mock_server.py  requirements.txt  test_client.py
tests/clients/: test_cached_backend_client.py  test_cached_git_client.py  test_config_client.py  test_distribution_client.py
tests/evaluation/: test_evaluation.py  test_rules.py
tests/evaulation/: test_evaluation.py  test_rules.py
